[gd_scene load_steps=5 format=3 uid="uid://lexvc7o5hvp1"]

[ext_resource type="Script" uid="uid://ciy7tm5ntuy1h" path="res://UI/HUD/InGameHUD.gd" id="1_53dev"]
[ext_resource type="Script" uid="uid://ce6ocn8vf4b1w" path="res://UI/Components/CountingLabel.gd" id="3_mj7kv"]
[ext_resource type="Texture2D" uid="uid://dlw21o2dcgf64" path="res://UI/Assets/icons8_comet_120px.png" id="3_ooic6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mddcy"]
content_margin_right = 10.0
bg_color = Color(1, 0.756863, 0.027451, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.960784, 0.592157, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0

[node name="InGameHUD" type="CanvasLayer"]
script = ExtResource("1_53dev")

[node name="HealthBarContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_direction = 2
anchors_preset = 10
anchor_right = 1.0
offset_left = 15.0
offset_top = 25.0
offset_right = -10.0
offset_bottom = 105.0
grow_horizontal = 2

[node name="ScoreLabel" type="Label" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_direction = 2
offset_left = 860.0
offset_top = 20.0
offset_right = 1060.0
offset_bottom = 102.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0.960784, 0.592157, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_mddcy")
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("3_mj7kv")

[node name="TextureRect" type="TextureRect" parent="ScoreLabel"]
layout_mode = 0
offset_left = -62.0
offset_top = -23.0
offset_right = 58.0
offset_bottom = 97.0
texture = ExtResource("3_ooic6")

[node name="MultiplierLabel" type="Label" parent="ScoreLabel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 43.0
offset_top = -63.0
offset_right = 96.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.341176, 0.133333, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.960784, 0.592157, 1)
theme_override_constants/paragraph_spacing = 2
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = -1
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 35
text = "2x"
